--- a/src/components/users/Profile.css
+++ b/src/components/users/Profile.css
@@ -5,5 +5,12 @@
     justify-content: center;
     align-items: center;
     grid-gap:20px;
+    padding: 10px 10px;
     
+}
+
+.main-grid{
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+
 }
