--- a/src/components/users/Search.css
+++ b/src/components/users/Search.css
@@ -1,4 +1,9 @@
 .search{
     margin: 0 auto;
+    text-align: center;
+    border: black 1px solid;
+    padding: 10px;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
