--- a/src/components/users/Profile.css
+++ b/src/components/users/Profile.css
@@ -12,12 +12,11 @@
 h2{
     margin: 0 auto;
     text-align: center;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: rgb(58, 56, 56);
 }
 
-h1{
-    margin: 0 auto;
-    text-align: center;
-}
+
 
 .main-grid{
     display: grid;
