--- a/src/components/users/Search.css
+++ b/src/components/users/Search.css
@@ -5,5 +5,18 @@
     padding: 10px;
     margin-top: 20px;
     margin-bottom: 20px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color:  rgb(58, 56, 56);
+}
+
+button{
+    background-color: cornflowerblue;
+    border: 0;
+    border-radius: 18px;
+}
+
+input{
+    border: 1px solid grey;
+    border-radius: 18px;
 }
 
